docs/_static/style.css
/* ... */
@media screen and (prefers-color-scheme: dark) {
  :root {
    --main-background: var(--grey-7);
    --link-text: var(--blue-1);
    --link-hover-text: var(--blue-2);
    --main-text: var(--white);
    --sub-header-background: var(--grey-8);
    --search-border: var(--grey-5);
    --nav-background: var(--main-background);
    --nav-text: var(--grey-1);
    --nav-hover-text: var(--grey-2);
    --nav-header-text: var(--white);
    --footer-text: var(--grey-2);
    --footer-link: var(--grey-1);
    --hr-border: var(--grey-1);
    --main-big-headers-text: var(--grey-1);
    --main-big-headers-border: var(--grey-1);
    --main-h5-header-text: var(--grey-4);
    --main-h6-header-text: var(--grey-5);
    --main-h4-header-border: var(--grey-2);
    --header-link: var(--grey-2);
    --header-link-hover-text: var(--grey-6);
    --admonition-background: var(--grey-8);
    --note-background: var(--blue-3);
    --note-text: var(--white);
    --warning-background: #d7b600;
    --warning-text: var(--black);
    --error-background: #d70022;
    --error-text: var(--white);
    --helpful-background: #008ea4;
    --helpful-text: var(--white);
    --codeblock-background: var(--grey-6);
    --codeblock-border: var(--black);
    --codeblock-text: var(--grey-1);
    --inline-code-background: var(--grey-8);
    --xref-code-background: transparent;
    --api-entry-background: var(--grey-6);
    --table-header-background: var(--grey-6);
    --table-text: var(--grey-1);
    --table-border: var(--grey-4);
    --active-toc: var(--grey-6);
    --scrollbar: rgba(0, 0, 0, 0.5);
    --scrollbar-hover: rgba(0, 0, 0, 0.7);
    --rtd-ad-border: var(--grey-6);
    --rtd-ad-background: var(--grey-5);
    --rtd-ad-main-text: var(--grey-2);
    --rtd-ad-small-text: var(--grey-1);
    --attribute-table-title: var(--grey-3);
    --attribute-table-entry-border: var(--grey-5);
    --attribute-table-entry-text: var(--grey-3);
    --attribute-table-entry-hover-border: var(--blue-1);
    --attribute-table-entry-hover-background: var(--grey-6);
    --attribute-table-entry-hover-text: var(--blue-1);
    --attribute-table-badge: var(--grey-4);
    --highlighted-text: rgba(250, 166, 26, 0.2);
    --tooltip-background: rgba(10, 10, 10, 0.95);
  }

  img[src$="/snake.svg"] {
    display: none;
  }

  img[src$="/snake_dark.svg"] {
    display: inherit;
  }
}

img[src$="/snake_dark.svg"]  {
  display: none;
}

body {
  font-family: var(--font-family);
  font-size: 16px;
  margin: 0;
  padding: 0;
  height: 100%;
  background-color: var(--main-background);
  color: var(--main-text);
}

/* all URLs only show underline on hover */
a {
  text-decoration: none;
  color: var(--link-text);
  transition: color 0.6s;
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover-text);
}

/* headers */

header{
  color: var(--main-text);
  position: sticky;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 40;
  padding: 0;
}

header > nav {
  color: var(--nav-text);
  background-color: var(--sub-header-background);
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  flex-wrap: wrap;
  align-items: center;
}

header > nav a {
  color: var(--nav-link-text);
  margin: 0 0.5em;
}

header > nav a:hover {
  color: var(--nav-link-hover-text);
}

header > nav.mobile-only {
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  z-index: -1;
  padding-top: 0;
  transition: top 0.5s ease-in-out;
}

header > nav.mobile-only .search {
  width: 100%;
}

header > nav.mobile-only .search-wrapper {
  background-color: var(--sub-header-background);
}

.main-heading img {
  max-width: 100%;
  max-height: 24px;
}

header > nav > a:hover {
  color: var(--grey-1-8);
  text-decoration: underline;
}

/* footer stuff */
footer {
  grid-area: f;
  font-size: 14px;
  text-align: right;
  color: var(--footer-text);
}

footer a {
  text-decoration: underline;
  color: var(--footer-link);
}

/* sidebar stuff */

main {
  margin-left: 300px;
  padding: 12px;
  z-index: 1;
}

aside {
  font-size: 14px;
  line-height: 1.75em;
  position: fixed;
  /* top: 0; Intentionally missing to give space for sticky header */
  background-color: var(--nav-background);
  color: var(--nav-text);
  left: 0;
  padding: 12px;
  overflow: auto;
  z-index: 3;
  max-height: 100vh;
  max-width: 300px;
  overflow-y: scroll;
  overscroll-behavior: contain;
}

header .header-breakpoint {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  padding: 6px;
}

header .extension-breakpoint {
  flex-grow: 1;
  justify-content: flex-end;
}

.main-heading img.small {
  display: none;
}

.extension-nav {
  text-transform: capitalize;
}

#hamburger-toggle {
  display: none;
}

.mobile {
  display: none !important;
}

.mobile-heading {
  display: none !important;
}
/* ... */

